[gd_scene load_steps=16 format=3 uid="uid://bbxlcx22f0k0g"]

[ext_resource type="Script" uid="uid://cybcb0saxqhxp" path="res://scene/player.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://estybm8qrbgr" path="res://img/player_sheet.png" id="2_hjaqi"]
[ext_resource type="Texture2D" uid="uid://d18j5a0peh8ne" path="res://img/dust_particle.png" id="3_fvtld"]

[sub_resource type="Animation" id="Animation_hjaqi"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fvtld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("dust_particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ct4mp"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_s4jxa"]
resource_name = "jump"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [29, 30, 31]
}

[sub_resource type="Animation" id="Animation_oh5ij"]
resource_name = "falling"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.20000002),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [34, 35, 36]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hp4bs"]
resource_name = "slide"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [125, 126, 127, 128, 129, 130]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(4.954765, 4.954765, 4.954765, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("dust_particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g2vtq"]
resource_name = "slide_loop"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [128, 129, 130]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ct4mp"]
_data = {
&"RESET": SubResource("Animation_fvtld"),
&"falling": SubResource("Animation_oh5ij"),
&"idle": SubResource("Animation_hjaqi"),
&"jump": SubResource("Animation_s4jxa"),
&"run": SubResource("Animation_ct4mp"),
&"slide": SubResource("Animation_hp4bs"),
&"slide_loop": SubResource("Animation_g2vtq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjaqi"]
radius = 5.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fvtld"]
radius = 5.0
height = 14.0

[sub_resource type="Curve" id="Curve_ct4mp"]
_data = [Vector2(0.23913045, 0.3146068), 0.0, 0.0, 0, 0, Vector2(0.73043483, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_s4jxa"]
offsets = PackedFloat32Array(0, 0.24019608, 0.61764705, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.69411767, 1, 1, 1, 0)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
floor_stop_on_slope = false
floor_constant_speed = true
floor_snap_length = 6.0
script = ExtResource("1_hjaqi")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_hjaqi")
offset = Vector2(0, -16)
hframes = 14
vframes = 14
frame = 6
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ct4mp")
}

[node name="default_shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_hjaqi")

[node name="slide_shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_fvtld")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -16)
zoom = Vector2(3, 3)

[node name="slide_timer" type="Timer" parent="."]
one_shot = true

[node name="dust_particles" type="CPUParticles2D" parent="."]
emitting = false
texture = ExtResource("3_fvtld")
lifetime = 0.6
one_shot = true
speed_scale = 1.5
explosiveness = 0.8
emission_shape = 2
emission_sphere_radius = 2.0
spread = 15.0
gravity = Vector2(0, -90)
initial_velocity_min = 120.0
initial_velocity_max = 120.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("Curve_ct4mp")
color_ramp = SubResource("Gradient_s4jxa")

[connection signal="timeout" from="slide_timer" to="." method="_on_slide_timer_timeout"]
